--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -10,18 +10,37 @@
         android:name="com.makkor.eb.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/permissions_fragment"
+        android:name="com.makkor.eb.ui.permissions.PermissionsFragment"
+        android:label="PermissionsFragment" >
+
+        <action
+            android:id="@+id/action_permissions_to_camera"
+            app:destination="@id/navigation_scan"
+            app:popUpTo="@id/permissions_fragment"
+            app:popUpToInclusive="true"
+            />
+    </fragment>
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.makkor.eb.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_scan"
+        android:name="com.makkor.eb.ui.scan.ScanFragment"
+        android:label="@string/title_scan"
+        tools:layout="@layout/fragment_scan" >
+        <action
+            android:id="@+id/action_scan_to_permissions"
+            app:destination="@id/permissions_fragment"
+            app:popUpTo="@id/navigation_scan"
+            app:popUpToInclusive="true"/>
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.makkor.eb.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+
     <fragment
         android:id="@+id/navigation_settings"
         android:name="com.makkor.eb.ui.settings.SettingsFragment"
@@ -30,4 +49,5 @@
     <action
         android:id="@+id/action_to_settingsFragment"
         app:destination="@id/navigation_settings"/>
+
 </navigation>
